Register dbus match event

--- a/EDLoop/Makefile
+++ b/EDLoop/Makefile
@@ -17,8 +17,11 @@ GEN_LIBS = libEDLoop.a
 # Compile Variables
 #############################################################
 
+DBUS_INCLUDES ?= -I/usr/include/dbus-1.0 -I/usr/lib/x86_64-linux-gnu/dbus-1.0/include
+
 #DEFINES  :=
 INCLUDES := -I$(TDIR)/Container -I$(TDIR)/CLogger
+INCLUDES += $(DBUS_INCLUDES)
 
 #############################################################
 # Recursion Magic
